Fixed word overflow

--- a/src/components/Nodulars/UIConsole/UIConsole.css
+++ b/src/components/Nodulars/UIConsole/UIConsole.css
@@ -5,11 +5,11 @@
     color: white;
     margin: 1rem;
     margin-top:2rem;
-
+    overflow-y: auto;
 }
 
 .console-spacing{
   width:80%;
   margin:2rem;
-
+  overflow-wrap: break-word;
 }
